--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,8 @@ DB_PORT=DB_PORT
 DB_USERNAME=DB_USERNAME
 DB_PASSWORD=DB_PASSWORD
 DB_DATABASE=DB_DATABASE
+
+JWT_SECRET=YOUR_JWT_SECRET
+JWT_REFRESH_SECRET=YOUR_JWT_REFRESH_SECRET
+NODE_ENV=development
+PORT=3000
